feat(system): metastores refactoring and FlowListeners removal