@@ -6,13 +6,16 @@ import io.kestra.core.models.flows.FlowWithPath;
 import io.kestra.core.models.flows.FlowWithSource;
 import io.kestra.core.models.flows.GenericFlow;
 import io.kestra.core.models.validations.ModelValidator;
+import io.kestra.core.queues.QueueFactoryInterface;
+import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
-import io.kestra.core.services.FlowListenersInterface;
 import io.kestra.core.services.PluginDefaultService;
 import io.micronaut.context.annotation.Requires;
 import io.micronaut.scheduling.io.watch.FileWatchConfiguration;
 import jakarta.annotation.Nullable;
+import jakarta.annotation.PreDestroy;
 import jakarta.inject.Inject;
+import jakarta.inject.Named;
 import jakarta.inject.Singleton;
 import jakarta.validation.ConstraintViolationException;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -44,13 +47,12 @@ public class FileChangedEventListener {
     private ModelValidator modelValidator;
 
     @Inject
-    protected FlowListenersInterface flowListeners;
+    @Named(QueueFactoryInterface.FLOW_NAMED) private QueueInterface<FlowInterface> flowQueue;
 
-    FlowFilesManager flowFilesManager;
+    private FlowFilesManager flowFilesManager;
+    private Runnable cancellation;
 
-    private List<FlowWithPath> flows = new CopyOnWriteArrayList<>();
-
-    private boolean isStarted = false;
+    private final List<FlowWithPath> flows = new CopyOnWriteArrayList<>();
 
     @Inject
     public FileChangedEventListener(@Nullable FileWatchConfiguration fileWatchConfiguration, @Nullable WatchService watchService) {
@@ -64,37 +66,34 @@ public class FileChangedEventListener {
             List<Path> paths = fileWatchConfiguration.getPaths();
             this.setup(paths);
 
-            flowListeners.run();
             // Init existing flows not already in files
-            flowListeners.listen(flows -> {
-                if (!isStarted) {
-                    for (FlowInterface flow : flows) {
-                        if (this.flows.stream().noneMatch(flowWithPath -> flowWithPath.uidWithoutRevision().equals(flow.uidWithoutRevision()))) {
-                            flowToFile(flow, this.buildPath(flow));
-                            this.flows.add(FlowWithPath.of(flow, this.buildPath(flow).toString()));
-                        }
-                    }
-                    this.isStarted = true;
-                }
+            flowRepositoryInterface.findAllForAllTenants().forEach(flow -> {
+                flowToFile(flow, this.buildPath(flow));
+                flows.add(FlowWithPath.of(flow, this.buildPath(flow).toString()));
             });
 
             // Listen for new/updated/deleted flows
-            flowListeners.listen((current, previous) -> {
-                // If deleted
-                if (current.isDeleted()) {
-                    this.flows.stream().filter(flowWithPath -> flowWithPath.uidWithoutRevision().equals(current.uidWithoutRevision())).findFirst()
-                        .ifPresent(flowWithPath -> {
-                            deleteFile(Paths.get(flowWithPath.getPath()));
-                        });
-                    this.flows.removeIf(flowWithPath -> flowWithPath.uidWithoutRevision().equals(current.uidWithoutRevision()));
+            flowQueue.receive(either -> {
+                if (either.isRight()) {
+                    log.error("Unable to deserialize a flow event: {}", either.getRight().getMessage());
                 } else {
-                    // if updated/created
-                    Optional<FlowWithPath> flowWithPath = this.flows.stream().filter(fwp -> fwp.uidWithoutRevision().equals(current.uidWithoutRevision())).findFirst();
-                    if (flowWithPath.isPresent()) {
-                        flowToFile(current, Paths.get(flowWithPath.get().getPath()));
+                    FlowInterface current = either.getLeft();
+                    // If deleted
+                    if (current.isDeleted()) {
+                        this.flows.stream().filter(flowWithPath -> flowWithPath.uidWithoutRevision().equals(current.uidWithoutRevision())).findFirst()
+                            .ifPresent(flowWithPath -> {
+                                deleteFile(Paths.get(flowWithPath.getPath()));
+                            });
+                        this.flows.removeIf(flowWithPath -> flowWithPath.uidWithoutRevision().equals(current.uidWithoutRevision()));
                     } else {
-                        flows.add(FlowWithPath.of(current, this.buildPath(current).toString()));
-                        flowToFile(current, null);
+                        // if updated/created
+                        Optional<FlowWithPath> flowWithPath = this.flows.stream().filter(fwp -> fwp.uidWithoutRevision().equals(current.uidWithoutRevision())).findFirst();
+                        if (flowWithPath.isPresent()) {
+                            flowToFile(current, Paths.get(flowWithPath.get().getPath()));
+                        } else {
+                            flows.add(FlowWithPath.of(current, this.buildPath(current).toString()));
+                            flowToFile(current, null);
+                        }
                     }
                 }
             });
@@ -103,6 +102,11 @@ public class FileChangedEventListener {
         } else {
             log.info("File watching is disabled.");
         }
+    }
+
+    @PreDestroy
+    void close() {
+        cancellation.run();
     }
 
     public void startListening(List<Path> paths) throws IOException, InterruptedException {
